# myRISCV32I_sim5

./: CMakeLists.txt  README.md  RISCV32I_sim.docx  main.cpp
headers/: PipeLine.h  RISCV.h  Scanner.h  get_Operations.h  jump_table.h
headers/Operations/: I_Operations.h  Operations.h  R_Operations.h  SUBJ_Operations.h
sources/: PipeLine.cpp  RISCV.cpp  Scanner.cpp  get_Operations.cpp  jump_table.cpp
sources/Operations/: I_Operations.cpp  Operations.cpp  R_Operations.cpp  SUBJ_Operations.cpp
